<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    >


    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/product"
            />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/postedBy"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/staticUserName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/productName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drEarth"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="12dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingRight="20dp"
            android:textSize="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceValue"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/offer"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offerDetails"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingRight="20dp"
            android:textSize="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobileNumber"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/telephone_icon"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:textStyle="bold"
    />
</LinearLayout>

</ScrollView>