<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="user_check_pkg.UserCheckActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="270dp"
        android:layout_height="70dp"
        app:errorEnabled="true"
        android:layout_gravity="center"
        android:id="@+id/view"
        android:layout_alignRight="@+id/edit_text_email"
        android:layout_alignEnd="@+id/edit_text_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterYourEmail"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:drawableRight="@drawable/email_icon"
        android:layout_below="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />


    <Button
        android:id="@+id/btn_user_check"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_below="@+id/edit_text_email"
        android:layout_centerHorizontal="true"
        android:elevation="30dp"
        />

    <TextView
        android:id="@+id/go_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:layout_below="@+id/btn_user_check"
        android:layout_centerHorizontal="true"
        android:textColor="@color/lightBlue"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        />

</RelativeLayout>
